package edu.advising.views;

public class ViewBudgetSummary {
}
