package edu.advising.views;

public class ViewOfficialTranscript {
}
