package edu.advising.views;

public class ViewPaymentReceipt {
}
