package edu.advising.views;

public abstract class ViewRender {
}
