package edu.advising.views;

public class ViewStudentFinanceSummary {
}
