package edu.advising.views;

public class ViewStudentTaxDocument {
}
